--- a/passjs.html
+++ b/passjs.html
@@ -14,7 +14,7 @@
         
         //header with info and link
         var myHeader = document.createElement("header");
-        myHeader.innerHTML = "Please enter a passowrd to see the strength of it Adapted from:"
+        myHeader.innerHTML = "Please enter a password to see the strength of it Adapted from:"
         var myLink = document.createElement("a");
         myLink.href = "http://www.uic.edu/apps/strong-password/";
         myLink.innerHTML = "www.uic.edu";
